--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf dist && tsc",
+    "test": "jest",
     "start": "node dist/index.js"
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "nodemon": "^3.1.3",
     "rimraf": "^5.0.7",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
