--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "test-app-v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "format": "biome check --write src",
     "dev": "nodemon",
     "build": "rimraf dist && tsc",
     "test": "jest",
@@ -11,7 +12,9 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "^1.8.1",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.2",
     "nodemon": "^3.1.3",
     "rimraf": "^5.0.7",
     "ts-jest": "^29.1.4",
