chore: Update JavaScript formatter configuration
This commit modifies the `biome.json` file to update the JavaScript formatter configuration. The `quoteStyle` options is added with the value "double". This change ensures consistent code formatting and improves code readability.

--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,8 @@
   },
   "javascript": {
     "formatter": {
-      "trailingCommas": "all"
+      "trailingCommas": "all",
+      "quoteStyle": "double"
     }
   }
 }
