chore: Add test workflow for CI

--- a/.github/workflows/ci-push.yml
+++ b/.github/workflows/ci-push.yml
@@ -10,3 +10,8 @@ jobs:
     name: Format
     uses: ./.github/workflows/format.yml
     secrets: inherit
+
+  test:
+    name: Test
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
