chore: Add containerize workflow and Dockerfile for containerization

--- a/.github/workflows/ci-push.yml
+++ b/.github/workflows/ci-push.yml
@@ -15,3 +15,9 @@ jobs:
     name: Test
     uses: ./.github/workflows/test.yml
     secrets: inherit
+  
+  containerize:
+    name: Containerize
+    uses: ./.github/workflows/containerize.yml
+    secrets: inherit
+    needs: format, test
