chore: Update GitHub Actions workflow for code formatting

--- a/.github/workflows/ci-push.yml
+++ b/.github/workflows/ci-push.yml
@@ -6,6 +6,11 @@ on:
       - dev
 
 jobs:
+  build:
+    name: Build
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
+
   format:
     name: Format
     uses: ./.github/workflows/format.yml
