--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,29 @@
 name: Build
 
 on:
-  workflow_call:
-
+  push:
+    branches:
+      - release   
+      - dev
+      - feature/*
+  pull_request:
+    branches:
+      - main
+      - release
+      - dev
+  
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
