chore: Update GitHub Actions workflows for code formatting and build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,7 @@
 name: Build
 
 on:
-  push:
-    branches:
-      - release   
-      - dev
-      - feature/*
-  pull_request:
-    branches:
-      - main
-      - release
-      - dev
+  workflow_call:
   
 jobs:
   build:
